@@ -3,6 +3,7 @@
 - bugfix possible warning "attempt to modify property of non-object" in {section} (issue #34)
 - added chaining to Smarty_Internal_Data so $smarty->assign('a',1)->assign('b',2); is possible now
 - bugfix remove race condition when a custom resource did change timestamp during compilation
+- bugfix variable property did not work on objects variable in template
 
 26.09.2011
 - bugfix repeated calls to same subtemplate did not make use of cached template object
